Revert "Selecting Ports has been disabled and transferred in the device listing item"
This reverts commit cfcb5608edfbc559dab94d20cba93915e57e1d3f.

--- a/ADIN.WPF/View/ExtraCommandsView.xaml
+++ b/ADIN.WPF/View/ExtraCommandsView.xaml
@@ -24,7 +24,7 @@
             <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: SubSys (Pin)" Command="{Binding SubSysResetCommand}" CommandParameter="{x:Static enum:ResetType.SubSysPin}" Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}"/>
             <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: SubSys" Command="{Binding SubSysResetCommand}" CommandParameter="{x:Static enum:ResetType.SubSys}" Visibility="{Binding IsResetButtonVisible, Converter={StaticResource booleanVisibilityConverter}}"/>
             <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: PHY" Command="{Binding PhyResetCommand}" CommandParameter="{x:Static enum:ResetType.Phy}" Visibility="{Binding IsResetButtonVisible, Converter={StaticResource booleanVisibilityConverter}}"/>
-            <!--<TextBlock Text="10Base-T1L Ports" Visibility="{Binding IsPortNumVisible, Converter={StaticResource booleanVisibilityConverter}}" FontWeight="Bold" FontSize="18" Margin="4 15 0 5"/>
+            <TextBlock Text="10Base-T1L Ports" Visibility="{Binding IsPortNumVisible, Converter={StaticResource booleanVisibilityConverter}}" FontWeight="Bold" FontSize="18" Margin="4 15 0 5"/>
             <Grid Margin="0 0 0 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -34,7 +34,7 @@
                                         Visibility="{Binding IsPortNumVisible, Converter={StaticResource booleanVisibilityConverter}}" IsChecked="{Binding IsPort1}" IsEnabled="{Binding EnableButton}"/>
                 <telerik:RadRadioButton Grid.Column="1" Style="{StaticResource RadioButtonStyle}" Content="Port 2" Width="Auto" Margin="3" GroupName="PortNumber" 
                                         Visibility="{Binding IsPortNumVisible, Converter={StaticResource booleanVisibilityConverter}}" IsChecked="{Binding IsPort2}" IsEnabled="{Binding EnableButton}"/>
-            </Grid>-->
+            </Grid>
         </StackPanel>
     </Grid>
 </UserControl>
