VAYU-824: - added MseSnr for getting the MSE raw values to be used processed as raw vs max with in dB value - added MseSnr class under helper - added MSE view for gigabit, showing raw, max and in dB MSE value - edited MSE foreground converter for MSE raw values as well

--- a/ADIN.WPF/View/DeviceStatusView.xaml
+++ b/ADIN.WPF/View/DeviceStatusView.xaml
@@ -96,11 +96,46 @@
                 </StackPanel>
             </Border>
 
-            <Border Style="{StaticResource BorderSyle}">
+            <Border Style="{StaticResource BorderSyle}" Visibility="{Binding Is1100Visible, Converter={StaticResource booleanVisibilityConverter}}">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="MSE: " Style="{StaticResource DeviceStatusTextBlockstyle}"/>
                     <TextBlock Text="{Binding MseValue}" Style="{StaticResource DeviceStatusValueStyle}" Foreground="{Binding Path=Text, RelativeSource={RelativeSource Self},Converter={StaticResource MSEForegroundConverter}}"/>
                 </StackPanel>
+            </Border>
+
+            <Border Style="{StaticResource BorderSyle}" Visibility="{Binding Is1100Visible, Converter={StaticResource invertedBooleanVisibilityConverter}}">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition MinWidth="40" Width="2*"/>
+                        <ColumnDefinition MinWidth="60" Width="3*"/>
+                        <ColumnDefinition MinWidth="60" Width="3*"/>
+                        <ColumnDefinition MinWidth="60" Width="3*"/>
+                        <ColumnDefinition MinWidth="60" Width="3*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Text="A" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                    <TextBlock Text="B" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                    <TextBlock Text="C" Grid.Row="0" Grid.Column="3" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                    <TextBlock Text="D" Grid.Row="0" Grid.Column="4" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+
+                    <TextBlock Text="MSE:" Grid.Row="1" Grid.Column="0" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                    <TextBlock Text="{Binding MseSnrValue.MseA}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusValueStyle}" Foreground="{Binding Path=Text, RelativeSource={RelativeSource Self},Converter={StaticResource MSEForegroundConverter}}"/>
+                    <TextBlock Text="{Binding MseSnrValue.MseB}" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusValueStyle}" Foreground="{Binding Path=Text, RelativeSource={RelativeSource Self},Converter={StaticResource MSEForegroundConverter}}"/>
+                    <TextBlock Text="{Binding MseSnrValue.MseC}" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusValueStyle}" Foreground="{Binding Path=Text, RelativeSource={RelativeSource Self},Converter={StaticResource MSEForegroundConverter}}"/>
+                    <TextBlock Text="{Binding MseSnrValue.MseD}" Grid.Row="1" Grid.Column="4" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusValueStyle}" Foreground="{Binding Path=Text, RelativeSource={RelativeSource Self},Converter={StaticResource MSEForegroundConverter}}"/>
+
+                    <TextBlock Text="SNR:" Grid.Row="2" Grid.Column="0" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                    <TextBlock Text="{Binding MseSnrdB.MseA}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusValueStyle}" Foreground="{Binding Path=Text, RelativeSource={RelativeSource Self},Converter={StaticResource MSEForegroundConverter}}"/>
+                    <TextBlock Text="{Binding MseSnrdB.MseB}" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusValueStyle}" Foreground="{Binding Path=Text, RelativeSource={RelativeSource Self},Converter={StaticResource MSEForegroundConverter}}"/>
+                    <TextBlock Text="{Binding MseSnrdB.MseC}" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusValueStyle}" Foreground="{Binding Path=Text, RelativeSource={RelativeSource Self},Converter={StaticResource MSEForegroundConverter}}"/>
+                    <TextBlock Text="{Binding MseSnrdB.MseD}" Grid.Row="2" Grid.Column="4" HorizontalAlignment="Center" Style="{StaticResource DeviceStatusValueStyle}" Foreground="{Binding Path=Text, RelativeSource={RelativeSource Self},Converter={StaticResource MSEForegroundConverter}}"/>
+
+                </Grid>
             </Border>
 
             <Border Style="{StaticResource BorderSyle}" Visibility="{Binding Is1100Visible, Converter={StaticResource booleanVisibilityConverter}}">
