--- a/ADIN.WPF/View/TestModeView.xaml
+++ b/ADIN.WPF/View/TestModeView.xaml
@@ -18,7 +18,7 @@
             <StackPanel Orientation="Vertical">
                 <TextBlock Text="Select Test Mode" Margin="0 0 0 10" Style="{StaticResource TextBlockstyle}"/>
 
-                <Border Style="{StaticResource BorderSyle}">
+                <Border Style="{StaticResource BorderSyle}" MaxHeight="380">
                     <ListView ItemsSource="{Binding TestModes}" SelectedItem="{Binding SelectedTestMode}" BorderThickness="0">
                         <ListView.ItemTemplate>
                             <DataTemplate>
