--- a/ADIN.WPF/AutoVersionIncrement.tt
+++ b/ADIN.WPF/AutoVersionIncrement.tt
@@ -1,6 +1,6 @@
 ﻿<#@ template debug="false" hostspecific="false" language="C#" #>
 <#@ output extension=".cs" #>
-// <copyright file="ViewModelBase.cs" company="Analog Devices Inc.">
+// <copyright file="AutoVersionIncrement.cs" company="Analog Devices Inc.">
 //     Copyright (c) 2024 Analog Devices Inc. All Rights Reserved.
 //     This software is proprietary and confidential to Analog Devices Inc. and its licensors.
 // </copyright>
